Complete read raw data and  prefilter process

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,4 @@ set (CMAKE_CXX_STANDARD 11)
 
 add_subdirectory(DNF)
 add_executable(ecg_filter ecg_filter.cpp parameters.h)
-target_link_libraries(ecg_filter CLDL)
+target_link_libraries(ecg_filter CLDL fir)
